--- a/AndBible/res/values-cy/strings.xml
+++ b/AndBible/res/values-cy/strings.xml
@@ -2,7 +2,8 @@
 <resources>
   <string name="app_name">And Bible</string>
   <!--Startup & Help-->
-  <string name="splash_top_text">\"Dwedodd Duw,\'Dw i eisiau golau!\' a daeth golau i fod.\" Genesis 1:3</string>
+  <string name="splash_top_text">
+\"Dwedodd Duw, \'Dw i eisiau golau!\' a daeth golau i fod.\" Genesis 1:3</string>
   <string name="help_text">Gwasgwch y DDEWISLEN i weithredu \n\nEwch i\'r bennod nesaf neu\'r flaenorol drwy ddefnyddio\'r trac-bel, D-pad neu drwy lusgo\'ch bys ar y sgrîn.</string>
   <string name="help_text_long"><b>Llywio</b> \nEwch i\'r bennod nesaf neu\'r flaenorol drwy ddefnyddio\'r trac-bel, D-pad neu drwy lusgo\'ch bys ar y sgrîn. \nMae tap dwbl yn toglo\'r Sgrîn Lawn i ffwrdd ac ymlaen.\n\n<b>Dewislen</b> \nGwasgwch y DDEWISLEN i weithredu.\n\nI lawrlwytho mwy o ddogfennau gwasgwch Dewislen/Lawrlwytho Dogfennau \n\n<b>Siarad</b> \nGwasgu \'Siarad\' i fynd i ddeialog dechrau neu stopio darllen\n\n<b>Fy Nodyn</b> Gellir ychwanegu nodiadau drwy Fy Nodyn ar y ddewislen cyd-destun adnod. Gellir mynd i\'r rhestr lawn o nodiadau o\'r brif ddewislen.\n\n<b>Nodau Llyfr</b>\nGellir ychwanegu Nodau Llyfr drwy\'r ddewislen cyd-destun adnod. Gellir mynd i\'r Rheolwr Nodau Llyfr o\'r brif ddewislen. Mae dewislen cyd-destun y Rheolwr Nodau Llyfr yn caniatau i nodau llyfr gael eu grwpio dan labeli.\n\n<b>Chwilio</b> \nGall chwilio\'r testun gynnwys nodau fel *, ?, A, NEU, DIM (gw. \"Apache Lucene - Query Parser Syntax\" am fwy o fanylion) \n\n<b>Dewislen Cyd-destun</b>\nGwasgiad hir ar \'gweld Beibl\' i agor y ddewislen weithredu ar gyfer yr adnod gyfredol. \nGwasgiad hir ar ddogfen yn y dewisydd dogfen i\'w dileu neu weld gwybodaeth. \nGwasgiad hir ar y botwm \'yn ol\' i fynd i mewn i\'r Hanes\n</string>
   <string name="version_text">Fersiwn %s</string>
@@ -16,6 +17,7 @@
   <string name="speak">Siarad</string>
   <string name="help">Cymorth</string>
   <string name="verse">Adnod</string>
+  <string name="administration">Gweinyddiaeth</string>
   <!--Passage navigation-->
   <string name="choosePassageBookName">Dewis Llyfr</string>
   <string name="choosePassageChapterName">Dewis Pennod</string>
@@ -74,6 +76,8 @@
   <string name="prefs_night_mode_automatic">Awtomatig</string>
   <string name="prefs_navigate_to_verse_title">Llywio i\'r adnod</string>
   <string name="prefs_navigate_to_verse_summary">Dewiswch adnod (a phennod) wrth ddewis adran</string>
+  <string name="prefs_open_links_in_special_window_title">Agor dolenni mewn ffenestr arbennig</string>
+  <string name="prefs_open_links_in_special_window_summary">I weld croes-gyfeiriadau a Strongs yn gyflymach</string>
   <string name="prefs_text_size_title">Maint y testun</string>
   <string name="prefs_text_size_summary">Gweld mwy neu weld yn gliriach</string>
   <string name="prefs_text_size_sample_text">sampl o destun</string>
@@ -84,6 +88,12 @@
   <string name="prefs_interface_locale_summary">Dewiswch iaith y rhyngwyneb i\'r defnyddiwr arferol</string>
   <string name="locale_change_warning">Bydd y rhaglen yn ailgychwyn i newid iaith y rhyngwyneb.</string>
   <!--Window-->
+  <string name="window">Ffenestr</string>
+  <string name="windowClose">Cau</string>
+  <string name="windowMaximise">Mwyhau</string>
+  <string name="windowMinimise">Lleihau</string>
+  <string name="windowSynchronise">Cysoni</string>
+  <string name="windowMoveFirst">Symud gyntaf</string>
   <!--Notes screen-->
   <string name="no_chapter_notes">Dim nodiadau yn bodoli yn y bennod hon</string>
   <string name="no_verse_notes">Dim nodiadau yn bodoli yn yr adnod hon</string>
@@ -114,6 +124,12 @@
   <string name="too_many_jobs">Mae gormod o dasgau\'n gweithredu. Arhoswch i rai i orffen a cheisiwch eto.</string>
   <string name="document_not_installed">Lawrlwythwch \'%s\'</string>
   <!--Install zip file-->
+  <string name="install_zip">Llwytho Dogfen o Zip</string>
+  <string name="install_zip_successfull">Cafodd y Modiwl ei osod yn llwyddiannus</string>
+  <string name="extracting_zip_file">Alldynnu\'r ffeil Zip nawr</string>
+  <string name="checking_zip_file">Gwiro\'r ffeil roddwyd...</string>
+  <string name="invalid_module">Nid yw\'r ffeil yn cynnwys modiwl SWORD dilys</string>
+  <string name="module_already_installed">Mae\'r ffeil yn cynnwys modiwl sydd wedi ei osod eisoes </string>
   <!--Daily Reading Plan-->
   <string name="rdg_plan_title">Cynllun Darllen</string>
   <string name="rdg_plan_selector_title">Dewiswch Gynllun Darllen</string>
@@ -126,6 +142,7 @@
   <string name="rdg_plan_y1ot1nt1_OTandNT">Drwy\'r Beibl mewn blwyddyn - HD a TN</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">Drwy\'r Beibl mewn blwyddyn - HD yna TN</string>
   <string name="rdg_plan_y1ot1nt2_mcheyne">Drwy\'r Beibl mewn blwyddyn (M\'Cheyne)</string>
+  <string name="rdg_plan_y2ot1ntps2">Cynllun 2 flynedd - HD unwaith, TN a Salmau ddwywaith</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Dileu</string>
@@ -197,6 +214,7 @@
   <string name="restore_confirmation">Trosysgrifo Fy Nodiadau a Nodau Llyfr?</string>
   <string name="restore_success">Fy Nodiadau a Nodau Llyfr wedi eu hadfer o %s ar y cerdyn SD</string>
   <!--About-->
+  <string name="about_copyright">Hawlfraint: %s</string>
   <string name="about_version">Fersiwn: %s</string>
   <string name="about_versification">Rhifau adnodau: %s</string>
   <!--Document types-->
@@ -220,7 +238,10 @@
   <string name="please_wait">Arhoswch ...</string>
   <string name="all">Y Cwbl</string>
   <string name="default_value">@string/lang_default</string>
+  <string name="new_item">Newydd</string>
+  <string name="close">Cau</string>
   <!--Errors-->
+  <string name="report_error">Anfon Adroddiad</string>
   <string name="error_occurred">Mae gwall wedi digwydd</string>
   <string name="error_no_content">Dim cynnwys ar gyfer yr adnod hon</string>
   <string name="error_page_too_large">Tudalen yn rhy fawr i\'w llwytho</string>
