--- a/AndBible/res/values-sl/strings.xml
+++ b/AndBible/res/values-sl/strings.xml
@@ -3,9 +3,9 @@
   <string name="app_name">And Biblija</string>
   <!--Startup & Help-->
   <string name="splash_top_text">
-\n\"In Bog je rekel: \'Naj bo luč;\' in bila je luč.\"\nGeneza 1:3</string>
+\n\"In Bog je rekel: \'Naj bo svetloba;\' in bila je svetloba.\"\nGeneza 1:3</string>
   <string name="help_text">Za aktiviranje pritisni tipko MENU\n\nNa naslednje ali prejšnje poglavje se pride z uporabo sledilne kroglice, trackpada ali pomikom prsta preko ekrana</string>
-  <string name="help_text_long"><b>Navigacija</b>\nNa naslednje ali prejšnje poglavje se pride z uporabo sledilne kroglice, D-pada ali pomikom prsta preko ekrana v desno ali levo.\n \nDvakraten pritisk vklopi/izklopi celoten ekran.\n \n\n<b>Menu</b> \nZa dejanja pritisni gumb MENU.\n\n \nZa prenos več dokumentov pritisni Menu/Upravljanje/Prenos Dokumentov\n \n\n<b>Govor</b>\nPritisnite Govor, da pridete do okna za pričetek in zaustavitev branja.\n \n\n<b>Moja Opomba</b>\nOpombe se lahko dodajajo preko menuja Dodaj Mojo opombo, ki se prikaže ob daljšem pritisku na vrstico. Do seznama obstoječih opomb se lahko dostopa prek glavnega menuja.\n \n\n<b>Zaznamki</b>\nZaznamke se lahko dodaja prek menuja, ki se prikaže ob daljšem pritisku na vrstico. Upravljalec zaznamkov je dostopen preko glavnega menuja. Podmenu Upravljalca zaznamkov dovoljuje razvrščanje zaznamkov glede na oznako.\n \n\n<b>Iskanje</b>\nIskanje besedila lahko vsebuje tudi posebne znake kot so: *, ?, AND, OR, NOT (za več podrobnosti glej \"Apache Lucene - Query Parser Syntax\")\n \n\n<b>Vrstični menuji</b>\n \nDaljši pritisk na biblične vrstice odpre ustrezen menu za dejanja, ki se nanašajo na trenutno vrstico.\n \nDaljši pritisk na biblijo ali dokument, pri izbiranju biblije ali dokumenta, ga lahko izbriše ali pa pokaže informacije o njem.\n \nDaljši pritisk na gumb Nazaj prikaže seznam zgodovine.</string>
+  <string name="help_text_long"><b>Navigacija</b>\nNa naslednje ali prejšnje poglavje se pride z uporabo sledilne kroglice, smernih tipk ali pomikom prsta preko ekrana v desno ali levo.\n \nDvakraten pritisk vklopi/izklopi celoten ekran.\n \n\n<b>Menu</b> \nZa dejanja se pritisne gumb MENU.\n\n \nZa prenos več dokumentov se pritisne Menu/Upravljanje/Prenos Dokumentov\n \n\n<b>Govor</b>\nPritisnite Govor, da pridete do okna za pričetek in zaustavitev branja.\n \n\n<b>Moja Opomba</b>\nOpombe se lahko dodajajo preko menuja Dodaj Mojo opombo, ki se prikaže ob daljšem pritisku na vrstico. Do seznama obstoječih opomb se lahko dostopa prek glavnega menuja.\n \n\n<b>Zaznamki</b>\nZaznamke se lahko dodaja prek menuja, ki se prikaže ob daljšem pritisku na vrstico. Upravljalec zaznamkov je dostopen preko glavnega menuja. Podmenu Upravljalca zaznamkov dovoljuje razvrščanje zaznamkov glede na oznako.\n \n\n<b>Iskanje</b>\nIskanje besedila lahko vsebuje tudi posebne znake kot so: *, ?, AND, OR, NOT (za več podrobnosti glej \"Apache Lucene - Query Parser Syntax\")\n \n\n<b>Vrstični menuji</b>\n \nDaljši pritisk na biblične vrstice odpre ustrezen menu za dejanja, ki se nanašajo na trenutno vrstico.\n \nDaljši pritisk na biblijo ali dokument, pri izbiranju biblije ali dokumenta, ga lahko izbriše ali pa pokaže informacije o njem.\n \nDaljši pritisk na gumb Nazaj prikaže seznam zgodovine.</string>
   <string name="version_text">Verzija %s</string>
   <string name="no_sdcard_error">Prosim vstavite SD kartico in ponovno poženite And Biblijo.</string>
   <!--Main menu-->
@@ -214,6 +214,7 @@
   <string name="restore_confirmation">Prepišem Moje opombe in Zaznamke?</string>
   <string name="restore_success">Moje opombe in Zaznamki so povrnjeni iz %s na SD kartici</string>
   <!--About-->
+  <string name="about_copyright">Avtorske pravice: %s</string>
   <string name="about_version">Verzija: %s</string>
   <string name="about_versification">Verzifikacija: %s</string>
   <!--Document types-->
@@ -240,6 +241,7 @@
   <string name="new_item">Novo</string>
   <string name="close">Zapri</string>
   <!--Errors-->
+  <string name="report_error">Pošlji poročilo</string>
   <string name="error_occurred">Zgodila se je napaka</string>
   <string name="error_no_content">Izbrana vrstica je brez vsebine</string>
   <string name="error_page_too_large">Stran je prevelika, da bi se prikazala</string>
