Integrate add/remove bookmark with new selection; added quick remove bookmark

--- a/and-bible/app/src/main/res/values/strings.xml
+++ b/and-bible/app/src/main/res/values/strings.xml
@@ -196,8 +196,10 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <!-- Bookmarks -->
     <string name="bookmarks">Bookmarks</string>
     <string name="add_bookmark">Add bookmark</string>
+    <string name="delete_bookmark">Delete bookmark</string>
     <string name="bookmark_added">Bookmark added</string>
     <string name="bookmark_exists">Bookmark already exists</string>
+    <string name="bookmark_deleted">Bookmark deleted</string>
     <string name="bookmark_labels">Bookmark Labels</string>
     <string name="assign_labels">Assign labels</string>
     <string name="new_label">New Label</string>
